--- a/deel-1-flexbox-positioneren/styles/styles.css
+++ b/deel-1-flexbox-positioneren/styles/styles.css
@@ -1,1 +1,74 @@
 /*Schrijf hier jouw CSS*/
+
+
+/* Opdracht 1*/
+.ul-1{
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Opdracht 2 */
+.ul-2{
+    display: flex;
+    flex-direction: row;
+}
+
+.ul-2>li{
+    flex-basis: 300px;
+}
+
+/* Opdracht 3 */
+
+.ul-3{
+    display: flex;
+    height: 125px;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.ul-3 > li:nth-child(1){
+    align-self: flex-start;
+}
+
+.ul-3 > li:nth-child(2){
+    align-self: center;
+}
+
+.ul-3 > li:nth-child(3){
+    align-self: flex-end;
+}
+
+/* Opdracht 4 */
+
+.ul-4{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 10px;
+}
+
+/* Opdracht 5 */
+
+.div-5{
+    display: flex;
+    justify-content: space-between;
+}
+
+.div-5 > ul{
+    display: flex;
+    row-gap: 30px;
+}
+
+.div-5 > ul:nth-child(1){
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.div-5 > ul:nth-child(2){
+    flex-direction: column;
+    align-items: center;
+}
+
+.div-5 > ul:nth-child(3){
+    flex-direction: column;
+    align-items: flex-end;
+}
