--- a/deel-2-flexbox-layout/opdracht-1/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-1/styles/styles.css
@@ -1,1 +1,49 @@
 /*Schrijf hier jouw CSS*/
+
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header{
+    flex-basis: 100px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+article{
+    flex-basis: 60vw;
+    flex-shrink: 1;
+    flex-grow: 1;
+    order: 1;
+}
+
+nav{
+    flex-basis: 20vw;
+    flex-shrink: 0;
+    flex-grow: 1;
+    order: 3;
+}
+
+aside{
+    flex-basis: 20vw;
+    flex-shrink: 0;
+    flex-grow: 1;
+    order: 2;
+}
+
+
+main{
+    display: flex;
+    flex-direction: row;
+    flex-basis: auto;
+    flex-shrink: 0;
+    flex-grow: 1;
+}
+
+footer{
+    flex-basis: 100px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
