--- a/deel-2-flexbox-layout/opdracht-2/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-2/styles/styles.css
@@ -1,1 +1,45 @@
 /*Schrijf hier jouw CSS*/
+body{
+    display: flex;
+    flex-direction: row;
+    min-height: 100vh;
+}
+
+.col-1{
+    flex-basis: 20vw;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+.col-2{
+    display: flex;
+    flex-direction: column;
+    flex-basis: auto;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+header{
+    flex-basis: 100px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+main{
+    display: flex;
+    flex-basis: auto;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+article{
+    flex-basis: auto;
+    flex-shrink: 1;
+    flex-grow: 1;
+}
+
+footer{
+    flex-basis: 100px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
